OnlineBookApp, OnlineBookAppJDBC, VoterApp Recommit